--- a/index.html
+++ b/index.html
@@ -483,8 +483,8 @@
           <div class="pricing-plan pricing-plan--starter">
             <header class="plan-header">
               <p class="plan-name">Starter</p>
-              <p class="plan-price"><span>$</span>399</p>
-              <p class="plan-text">per month. That's just $13 per meal!</p>
+              <p class="plan-price"><span>Rs</span>1500</p>
+              <p class="plan-text">per month. That's just Rs 50 per meal!</p>
             </header>
             <ul class="list">
               <li class="list-item">
@@ -511,8 +511,8 @@
           <div class="pricing-plan pricing-plan--complete">
             <header class="plan-header">
               <p class="plan-name">Complete</p>
-              <p class="plan-price"><span>$</span>649</p>
-              <p class="plan-text">per month. That's just $11 per meal!</p>
+              <p class="plan-price"><span>$</span>2700</p>
+              <p class="plan-text">per month. That's just 45 per meal!</p>
             </header>
             <ul class="list">
               <li class="list-item">
@@ -677,11 +677,9 @@
         <div class="address-col">
           <p class="footer-heading">Contact us</p>
           <address class="contacts">
-            <p class="address">
-              623 Harrison St., 2nd Floor, San Francisco, CA 94107
-            </p>
+            <p class="address">Lok Vihar Marg, New Delhi, 110001</p>
             <p>
-              <a class="footer-link" href="tel:415-201-6370">415-201-6370</a
+              <a class="footer-link" href="tel:917986368145">917986368145</a
               ><br />
               <a class="footer-link" href="mailto:hello@omnifood.com"
                 >hello@omnifood.com</a
