--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@
           <div class="pricing-plan pricing-plan--complete">
             <header class="plan-header">
               <p class="plan-name">Complete</p>
-              <p class="plan-price"><span>$</span>2700</p>
+              <p class="plan-price"><span>Rs</span>2700</p>
               <p class="plan-text">per month. That's just 45 per meal!</p>
             </header>
             <ul class="list">
